--- a/card.css
+++ b/card.css
@@ -11,7 +11,7 @@ body {
     margin-top: 450px;
     margin-right:auto;
     margin-left: auto;
-    background: #050409;
+    background: #5c5c5c;
     color: #edede9;;
     border-radius: 7px;
     transition: transform 0.3s ease;
